3rdparty/bicpl-surface/Include/bicpl/obj_defs.h

/*! \brief Colour style of compound geometrical object.
 * Objects such as lines, polygons, and quadmeshes that are comprised 
 * of many smaller objects may have one colour for the whole compound,
 * or the colours may be set for individual elements of the compound.
 */
typedef enum { ONE_COLOUR, PER_ITEM_COLOURS, PER_VERTEX_COLOURS } Colour_flags;
/*! \brief In-memory structure for polygonal lines.
 * \ingroup grp_bicobj
 */
typedef  struct
{
    Colour_flags   colour_flag;
    Colour         *colours;
    float          line_thickness;

    int            n_points;
    Point          *points;

    int            n_items;
    int            *end_indices;
    int            *indices;

    bintree_struct_ptr  bintree;
} lines_struct;
/*! \brief In-memory structure for a marker.
 * \ingroup grp_bicobj
 */
typedef  struct
{
    Marker_types   type;
    Colour         colour;
    Point          position;
    Real           size;
    STRING         label;
    int            structure_id;
    int            patient_id;
} marker_struct;
/*! \brief In-memory structure for polygons.
 * \ingroup grp_bicobj
 */
typedef  struct
{
    /*! Colours may be specified for entire set (colour_flag == ONE_COLOUR)
       or per item.  The colour array is dynamically resized to match */
    Colour_flags    colour_flag;
    Colour          *colours;
    Surfprop        surfprop;
    float           line_thickness;

    /*! points is a dynamic array.  normals may be either NULL
       (no normal information kept) or a dynamic array. */
    int             n_points;
    Point           *points;
    Vector          *normals;

    /*! "items" are the polygons themselves; they appear to be stored in
       the following manner.  
       Each polygon is specified by a list of points, stored as indices
       into the "points" array.  Polygon 0's list of indices is 
       indices[0], indices[1], ..., indices[E-1],
       where E = end_indices[0].  Polygon 1's list starts at indices[E].       
     */
    int             n_items;
    int             *end_indices;
    int             *indices;

    Smallest_int    *visibilities;
    int             *neighbours;
    bintree_struct_ptr  bintree;
} polygons_struct;
/*! \brief In-memory structure for a quadrilateral mesh.
 * \ingroup grp_bicobj
 * \ingroup grp_quadmesh
 */
typedef  struct
{
    Colour_flags    colour_flag;
    Colour          *colours;
    Surfprop        surfprop;

    /*! These fields set whether the rows (m_closed) or the columns
     * (n_closed) have their extreme points joined by an edge.
     */
    BOOLEAN         m_closed, n_closed;

    /*! The number of rows (m) and columns (n).
     */
    int             m, n;
    Point           *points;
    Vector          *normals;

    bintree_struct_ptr  bintree;
} quadmesh_struct;
/*! \brief In-memory structure for text.
 * \ingroup grp_bicobj
 */
typedef  struct
{
    Point       origin;
    Colour      colour;
    Font_types  font;
    Real        size;
    STRING      string;
} text_struct;
/*! \brief In-memory structure for ???
 * \ingroup grp_bicobj
 */
typedef  struct
{
    int             x_position;
    int             y_position;
    int             x_size;
    int             y_size;
    Real            x_zoom;      
    Real            y_zoom;      
    Pixel_types     pixel_type;
    union
    {
        unsigned char   *pixels_8bit_colour_index;
        unsigned short  *pixels_16bit_colour_index;
        Colour          *pixels_rgb;
    } data;

} pixels_struct;
/* ------------------------------------------------------------------------ */

typedef enum  { LINES, MARKER, MODEL, PIXELS, POLYGONS, QUADMESH, TEXT,
                N_OBJECT_TYPES } Object_types;
/*! \brief In-memory structure for a model.
 * \ingroup grp_bicobj
 * A model is a set of objects with associated data,
 * stored together in a file.
 */
typedef  struct
{
    STRING                 filename;
    int                    n_objects;
    struct  object_struct  **objects;
    void                   *extra_ptr;
} model_struct;
/*! \brief In-memory structure for an object.
 * \ingroup grp_bicobj
 */
typedef struct  object_struct
{
    Object_types    object_type;
    BOOLEAN         visibility;

    union
    {
    lines_struct       lines;
    marker_struct      marker;
    model_struct       model;
    pixels_struct      pixels;
    polygons_struct    polygons;
    quadmesh_struct    quadmesh;
    text_struct        text;
    } specific;

} object_struct;