3rdparty/bicpl-surface/Include/bicpl/object_prototypes.h

#define  Real double
BICAPI  Status   input_graphics_file(
    STRING         filename,
    File_formats   *format,
    int            *n_objects,
    object_struct  ***object_list );
BICAPI  Status   output_graphics_file(
    STRING         filename,
    File_formats   format,
    int            n_objects,
    object_struct  *object_list[] );
BICAPI  void  set_bintree_delete_function(
    void  (*func)( bintree_struct_ptr * ) );
BICAPI  void  delete_object_list(
    int              n_objects,
    object_struct    *object_list[] );
BICAPI  Object_types  get_object_type(
    object_struct   *object );
BICAPI  polygons_struct  *get_polygons_ptr(
    object_struct  *object );